--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -8712,6 +8712,20 @@
   mrclass: '90C40 (60K15)'
   volume: '31'
 
+- number: '6'
+  author: 'Bhattacharyya, Tirthankar and Rastogi, Shubham and Kumar, U. Vijaya'
+  fjournal: 'Complex Analysis and Operator Theory'
+  url: 'https://doi.org/10.1007/s11785-022-01257-0'
+  pages: 'Paper No. 83, 39'
+  year: '2022'
+  title: 'The joint spectrum for a commuting pair of isometries in certain cases'
+  doi: '10.1007/s11785-022-01257-0'
+  issn: '1661-8254'
+  journal: 'Complex Anal. Oper. Theory'
+  mrnumber: '4454395'
+  mrclass: '47A13 (47A45 47A65)'
+  volume: '16'
+
 - number: '2'
   author: 'Bhattacharyya, Tirthankar and Pal, Sourav'
   fjournal: 'Journal of Operator Theory'
@@ -9314,6 +9328,18 @@
   mrnumber: '3190770'
   mrclass: '44A12 (42B20)'
   volume: '174'
+
+- number: '2'
+  author: 'Choudhury, Projesh Nath'
+  fjournal: 'Bulletin of the London Mathematical Society'
+  pages: '791-811'
+  year: '2022'
+  title: 'Characterizing total positivity: single vector tests via linear complementarity, sign non-reversal and variation diminution'
+  issn: '0024-6093'
+  journal: 'Bull. Lond. Math. Soc.'
+  mrnumber: '4453705'
+  mrclass: '15B48 (15A24 90C33)'
+  volume: '54'
 
 - number: '4'
   author: 'Banerjee, Abhishek'
@@ -11162,6 +11188,20 @@
   mrnumber: '3730038'
   mrclass: '46B20 (47A30)'
   volume: '2'
+
+- number: '1'
+  author: 'Deo, Shaunak V.'
+  fjournal: 'Journal de Th&eacute;orie des Nombres de Bordeaux'
+  url: 'https://doi.org/10.5802/jtnb.119'
+  pages: '189-236'
+  year: '2022'
+  title: 'Effect of increasing the ramification on pseudo-deformation rings'
+  doi: '10.5802/jtnb.119'
+  issn: '1246-7405'
+  journal: 'J. Th&eacute;or. Nombres Bordeaux'
+  mrnumber: '4450614'
+  mrclass: '11F80 (11F33 11F70 13H10)'
+  volume: '34'
 
 - number: '3'
   author: 'Ayyer, Arvind and Schilling, Anne and Steinberg, Benjamin and Thi&eacute;ry, Nicolas M.'
@@ -13756,21 +13796,6 @@
   volume: '51'
 
 - number: '2'
-  author: 'Kesavan, S. and Rajesh, M.'
-  fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
-  url: 'http://dx.doi.org/10.1007/BF02829758'
-  pages: '337-346'
-  year: '2002'
-  mrreviewer: 'Carlos Castro Barbero'
-  title: 'On the limit matrix obtained in the homogenization of an optimal control problem'
-  doi: '10.1007/BF02829758'
-  issn: '0253-4142'
-  journal: 'Proc. Indian Acad. Sci. Math. Sci.'
-  mrnumber: '1908375'
-  mrclass: '49J45 (35B27 35B37 49K20)'
-  volume: '112'
-
-- number: '2'
   author: 'Bhosle, U. N. and Brambila-Paz, L. and Newstead, P. E.'
   fjournal: 'International Journal of Mathematics'
   url: 'https://doi.org/10.1142/S0129167X1550007X'
@@ -14080,6 +14105,33 @@
   mrclass: '82C22'
   journal: 'J. Stat. Mech. Theory Exp.'
   mrnumber: '4248770'
+
+- author: 'Belton, Alexander and Guillot, Dominique and Khare, Apoorva and Putinar, Mihai'
+  fjournal: 'Mathematics Research Reports'
+  url: 'https://doi.org/10.5802/mrr.12'
+  pages: '35-56'
+  year: '2022'
+  title: 'Preservers of totally positive kernels and P&oacute;lya frequency functions'
+  doi: '10.5802/mrr.12'
+  journal: 'Math. Res. Rep.'
+  mrnumber: '4462467'
+  mrclass: '42A82 (15A15 15B48 44A10)'
+  volume: '3'
+
+- number: '2'
+  author: 'Kesavan, S. and Rajesh, M.'
+  fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
+  url: 'http://dx.doi.org/10.1007/BF02829758'
+  pages: '337-346'
+  year: '2002'
+  mrreviewer: 'Carlos Castro Barbero'
+  title: 'On the limit matrix obtained in the homogenization of an optimal control problem'
+  doi: '10.1007/BF02829758'
+  issn: '0253-4142'
+  journal: 'Proc. Indian Acad. Sci. Math. Sci.'
+  mrnumber: '1908375'
+  mrclass: '49J45 (35B27 35B37 49K20)'
+  volume: '112'
 
 - number: '4'
   author: 'Gudi, Thirupathi'
@@ -16583,6 +16635,19 @@
   mrclass: '37D45 (34C15)'
   volume: '19'
 
+- number: '1'
+  author: 'Ayyer, Arvind and Chhita, Sunil'
+  fjournal: 'Transactions of the London Mathematical Society'
+  url: 'https://doi.org/10.1112/tlm3.12039'
+  pages: '493-526'
+  year: '2022'
+  title: 'Correlations in totally symmetric self-complementary plane partitions'
+  doi: '10.1112/tlm3.12039'
+  journal: 'Trans. London Math. Soc.'
+  mrnumber: '4451553'
+  mrclass: '05C70 (05A17 60G55 60K35 82B20)'
+  volume: '9'
+
 - number: '1-2'
   author: 'Krishnamurthy, E. V.'
   fjournal: 'Elektronische Informationsverarbeitung und Kybernetik'
@@ -16674,20 +16739,6 @@
   mrnumber: '1258854'
   mrclass: '05C60'
   volume: '124'
-
-- url: 'http://dx.doi.org/10.1142/7725'
-  mrnumber: '2648005'
-  pages: 'x+209'
-  year: '2010'
-  title: 'Introduction to algebraic geometry and commutative algebra'
-  doi: '10.1142/7725'
-  author: 'Patil, Dilip P. and Storch, Uwe'
-  series: 'IISc Lecture Notes Series'
-  mrreviewer: 'Liam O&#39;Carroll'
-  publisher: 'IISc Press, Bangalore; World Scientific Publishing Co. Pte. Ltd., Hackensack, NJ'
-  isbn: '978-981-4307-58-1; 981-4307-58-0'
-  mrclass: '13-01 (13N05 14-01 14A99 14C40)'
-  volume: '1'
 
 - number: '2'
   author: 'Ramaswamy, Mythily and Dharmatti, Sheetal'
@@ -17134,6 +17185,34 @@
   mrnumber: '1066388'
   mrclass: '35L70 (35B45)'
   volume: '15'
+
+- url: 'http://dx.doi.org/10.1142/7725'
+  mrnumber: '2648005'
+  pages: 'x+209'
+  year: '2010'
+  title: 'Introduction to algebraic geometry and commutative algebra'
+  doi: '10.1142/7725'
+  author: 'Patil, Dilip P. and Storch, Uwe'
+  series: 'IISc Lecture Notes Series'
+  mrreviewer: 'Liam O&#39;Carroll'
+  publisher: 'IISc Press, Bangalore; World Scientific Publishing Co. Pte. Ltd., Hackensack, NJ'
+  isbn: '978-981-4307-58-1; 981-4307-58-0'
+  mrclass: '13-01 (13N05 14-01 14A99 14C40)'
+  volume: '1'
+
+- number: '1'
+  author: 'Dhanwani, Neeraj K. and Nair, Ajay K. and Rajeevsarathy, Kashyap'
+  fjournal: 'Journal of Pure and Applied Algebra'
+  url: 'https://doi.org/10.1016/j.jpaa.2022.107159'
+  pages: 'Paper No. 107159, 33'
+  year: '2023'
+  title: 'Factoring periodic maps into Dehn twists'
+  doi: '10.1016/j.jpaa.2022.107159'
+  issn: '0022-4049'
+  journal: 'J. Pure Appl. Algebra'
+  mrnumber: '4448910'
+  mrclass: '57M60 (57M50 57M99)'
+  volume: '227'
 
 - number: '4'
   author: 'Mohan Kumar, N. and Rao, A. P. and Ravindra, G. V.'
@@ -17816,20 +17895,6 @@
   mrclass: '76Rxx (80A20)'
   volume: '84'
 
-- number: '4'
-  author: 'B&eacute;g, O. Anwar and Takhar, H. S. and B&eacute;g, Tasveer A. and Chamkha, A. J. and Nath, G. and Majeed, Rui'
-  fjournal: 'International Journal of Fluid Mechanics Research'
-  url: 'http://dx.doi.org/10.1615/InterJFluidMechRes.v32.i4.10'
-  pages: '383-401'
-  year: '2005'
-  title: 'Modelling convection heat transfer in a rotating fluid in a thermally-stratified high-porosity medium: numerical finite difference solutions'
-  doi: '10.1615/InterJFluidMechRes.v32.i4.10'
-  issn: '1064-2277'
-  journal: 'Int. J. Fluid Mech. Res.'
-  mrnumber: '2331776'
-  mrclass: '76S05 (76U05 80A20)'
-  volume: '32'
-
 - number: '3'
   author: 'Nandakumaran, A. K. and Rajesh, M.'
   fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
@@ -18182,6 +18247,33 @@
   mrnumber: '3210395'
   mrclass: '18D10 (16E40)'
   volume: '42'
+
+- number: '4'
+  author: 'B&eacute;g, O. Anwar and Takhar, H. S. and B&eacute;g, Tasveer A. and Chamkha, A. J. and Nath, G. and Majeed, Rui'
+  fjournal: 'International Journal of Fluid Mechanics Research'
+  url: 'http://dx.doi.org/10.1615/InterJFluidMechRes.v32.i4.10'
+  pages: '383-401'
+  year: '2005'
+  title: 'Modelling convection heat transfer in a rotating fluid in a thermally-stratified high-porosity medium: numerical finite difference solutions'
+  doi: '10.1615/InterJFluidMechRes.v32.i4.10'
+  issn: '1064-2277'
+  journal: 'Int. J. Fluid Mech. Res.'
+  mrnumber: '2331776'
+  mrclass: '76S05 (76U05 80A20)'
+  volume: '32'
+
+- author: 'Gupta, Rahul and Krishna, Amalendu'
+  fjournal: 'Journal of Algebra'
+  url: 'https://doi.org/10.1016/j.jalgebra.2022.06.004'
+  pages: '487-552'
+  year: '2022'
+  title: 'Reciprocity for Kato-Saito idele class group with modulus'
+  doi: '10.1016/j.jalgebra.2022.06.004'
+  issn: '0021-8693'
+  journal: 'J. Algebra'
+  mrnumber: '4447740'
+  mrclass: '14F35 (14G15 19F05)'
+  volume: '608'
 
 - number: '1'
   author: 'Sen, Suparna'
