--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -3876,21 +3876,6 @@
   mrclass: '76Z05 (74F10 74L15 92C35)'
   volume: '54'
 
-- number: '19'
-  author: 'Jalnapurkar, Sameer M. and Leok, Melvin and Marsden, Jerrold E. and West, Matthew'
-  fjournal: 'Journal of Physics. A. Mathematical and General'
-  url: 'http://dx.doi.org/10.1088/0305-4470/39/19/S12'
-  pages: '5521-5544'
-  year: '2006'
-  mrreviewer: 'Juan Carlos Marrero Gonzalez'
-  title: 'Discrete Routh reduction'
-  doi: '10.1088/0305-4470/39/19/S12'
-  issn: '0305-4470'
-  journal: 'J. Phys. A'
-  mrnumber: '2220774'
-  mrclass: '37J15 (37M15 65L06 70-08 70H33)'
-  volume: '39'
-
 - number: '2'
   author: 'Panda, Srikumar and Martha, Subash Chandra and Chakrabarti, Aloknath'
   fjournal: 'Journal of the Orissa Mathematical Society'
@@ -4195,6 +4180,35 @@
   mrnumber: '4145798'
   mrclass: '47B32 (47A60 47B13)'
   volume: '238'
+
+- number: '3'
+  author: 'Bhunia, Pintu and Sain, Debmalya and Paul, Kallol'
+  fjournal: 'Collectanea Mathematica'
+  url: 'https://doi.org/10.1007/s13348-021-00332-7'
+  pages: '521-533'
+  year: '2022'
+  title: 'On the Davis-Wielandt shell of an operator and the Davis-Wielandt index of a normed linear space'
+  doi: '10.1007/s13348-021-00332-7'
+  issn: '0010-0757'
+  journal: 'Collect. Math.'
+  mrnumber: '4467912'
+  mrclass: '47A12 (46B20 47L05)'
+  volume: '73'
+
+- number: '19'
+  author: 'Jalnapurkar, Sameer M. and Leok, Melvin and Marsden, Jerrold E. and West, Matthew'
+  fjournal: 'Journal of Physics. A. Mathematical and General'
+  url: 'http://dx.doi.org/10.1088/0305-4470/39/19/S12'
+  pages: '5521-5544'
+  year: '2006'
+  mrreviewer: 'Juan Carlos Marrero Gonzalez'
+  title: 'Discrete Routh reduction'
+  doi: '10.1088/0305-4470/39/19/S12'
+  issn: '0305-4470'
+  journal: 'J. Phys. A'
+  mrnumber: '2220774'
+  mrclass: '37J15 (37M15 65L06 70-08 70H33)'
+  volume: '39'
 
 - number: '2'
   author: 'Gudi, Thirupathi and Majumder, Papri'
@@ -4873,21 +4887,6 @@
   mrclass: '57M60 (52B70 52C20)'
   volume: '61'
 
-- number: '13'
-  author: 'Radha, R. and Thangavelu, S. and Venku Naidu, D.'
-  fjournal: 'Mathematische Nachrichten'
-  url: 'http://dx.doi.org/10.1002/mana.201100233'
-  pages: '1337-1352'
-  year: '2013'
-  mrreviewer: 'Petr Gurka'
-  title: 'On the images of Sobolev spaces under the heat kernel transform on the Heisenberg group'
-  doi: '10.1002/mana.201100233'
-  issn: '0025-584X'
-  journal: 'Math. Nachr.'
-  mrnumber: '3103890'
-  mrclass: '42B35 (43A80 46E35)'
-  volume: '286'
-
 - number: '5-6'
   author: 'Rangarajan, Govindan and Chen, Yonghong and Ding, Mingzhou'
   fjournal: 'Physics Letters. A'
@@ -5021,6 +5020,34 @@
   mrnumber: '3259758'
   mrclass: '32H35 (32H40)'
   volume: '271'
+
+- number: '13'
+  author: 'Radha, R. and Thangavelu, S. and Venku Naidu, D.'
+  fjournal: 'Mathematische Nachrichten'
+  url: 'http://dx.doi.org/10.1002/mana.201100233'
+  pages: '1337-1352'
+  year: '2013'
+  mrreviewer: 'Petr Gurka'
+  title: 'On the images of Sobolev spaces under the heat kernel transform on the Heisenberg group'
+  doi: '10.1002/mana.201100233'
+  issn: '0025-584X'
+  journal: 'Math. Nachr.'
+  mrnumber: '3103890'
+  mrclass: '42B35 (43A80 46E35)'
+  volume: '286'
+
+- author: 'Ayyer, Arvind and Kumari, Nishu'
+  fjournal: 'Journal of Algebra'
+  url: 'https://doi.org/10.1016/j.jalgebra.2022.06.015'
+  pages: '437-483'
+  year: '2022'
+  title: 'Factorization of classical characters twisted by roots of unity'
+  doi: '10.1016/j.jalgebra.2022.06.015'
+  issn: '0021-8693'
+  journal: 'J. Algebra'
+  mrnumber: '4457393'
+  mrclass: '20G05 (05A15 05E05 05E10 20G20)'
+  volume: '609'
 
 - number: '5'
   author: 'Sekar, S. and Nath, G.'
@@ -6690,19 +6717,6 @@
   mrclass: '49J40 (35A15 35J85 60G40 91A15)'
   volume: '113'
 
-- number: '1'
-  author: 'Bhat, B. V. Rajarama and Bhattacharyya, Tirthankar'
-  fjournal: 'Journal of Operator Theory'
-  pages: '97-116'
-  year: '2002'
-  mrreviewer: 'Gelu Fanica Popescu'
-  title: 'A model theory for $q$-commuting contractive tuples'
-  issn: '0379-4024'
-  journal: 'J. Operator Theory'
-  mrnumber: '1905815'
-  mrclass: '47A45 (46L05 47A13 47A20)'
-  volume: '47'
-
 - mrnumber: '1416329'
   pages: 'xiv+918'
   year: '1997'
@@ -7038,6 +7052,31 @@
   mrnumber: '3450748'
   mrclass: '35B27 (35L20 78M35)'
   volume: '29'
+
+- number: '1'
+  author: 'Bhat, B. V. Rajarama and Bhattacharyya, Tirthankar'
+  fjournal: 'Journal of Operator Theory'
+  pages: '97-116'
+  year: '2002'
+  mrreviewer: 'Gelu Fanica Popescu'
+  title: 'A model theory for $q$-commuting contractive tuples'
+  issn: '0379-4024'
+  journal: 'J. Operator Theory'
+  mrnumber: '1905815'
+  mrclass: '47A45 (46L05 47A13 47A20)'
+  volume: '47'
+
+- author: 'Bhamidi, Shankar and Dhara, Souvik and van der Hofstad, Remco and Sen, Sanchayan'
+  fjournal: 'Electronic Journal of Probability'
+  url: 'https://doi.org/10.1214/22-ejp821'
+  pages: 'Paper No. 103, 29'
+  year: '2022'
+  title: 'Global lower mass-bound for critical configuration models in the heavy-tailed regime'
+  doi: '10.1214/22-ejp821'
+  journal: 'Electron. J. Probab.'
+  mrnumber: '4460270'
+  mrclass: '60C05 (05C80)'
+  volume: '27'
 
 - number: '1-2'
   author: 'Pingali, Vamsi Pritham'
@@ -7629,6 +7668,19 @@
   mrnumber: '3649340'
   mrclass: '47A20 (32A70 46E22)'
   volume: '53'
+
+- author: 'Mal, Arpita'
+  fjournal: 'Bulletin des Sciences Math&eacute;matiques'
+  url: 'https://doi.org/10.1016/j.bulsci.2022.103172'
+  pages: 'Paper No. 103172, 14'
+  year: '2022'
+  title: 'Extreme points of the unit ball of $\mathcal L(X)^*_w$ and best approximation in $\mathcal L(X)_w$'
+  doi: '10.1016/j.bulsci.2022.103172'
+  issn: '0007-4497'
+  journal: 'Bull. Sci. Math.'
+  mrnumber: '4458171'
+  mrclass: '46B28 (46B20 47A12)'
+  volume: '179'
 
 - number: '6'
   author: 'Ghosh, Mrinal K. and Arapostathis, Aristotle and Marcus, Steven I.'
@@ -12018,6 +12070,19 @@
   mrnumber: '1182785'
   mrclass: '76N15'
   volume: '43'
+
+- author: 'Monisha, S. and Vishnu Priya, N. and Senthilvelan, M. and Rajasekar, S.'
+  fjournal: 'Chaos, Solitons \& Fractals'
+  url: 'https://doi.org/10.1016/j.chaos.2022.112433'
+  pages: 'Paper No. 112433, 12'
+  year: '2022'
+  title: 'Higher order smooth positon and breather positon solutions of an extended nonlinear Schr&ouml;dinger equation with the cubic and quartic nonlinearity'
+  doi: '10.1016/j.chaos.2022.112433'
+  issn: '0960-0779'
+  journal: 'Chaos Solitons Fractals'
+  mrnumber: '4458181'
+  mrclass: '35Q55'
+  volume: '162'
 
 - number: '2'
   author: 'Gayen, Rupanwita and Gupta, Sourav and Chakrabarti, Aloknath'
