Added Postdoc Dr. Dharmendra Kumar

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -129,4 +129,10 @@
   image: true
   research-area: Algebraic Combinatorics
  
-
+- name: Dharmendra Kumar
+  webpage: 
+  phd: IIT Gandhinagar
+  user-id: dharmendrak
+  position: IOE
+  image: true
+  research-area: PDEs
