--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -3862,20 +3862,6 @@
   mrclass: '47A20 (47A25)'
   volume: '10'
 
-- number: '3'
-  author: 'Mishra, Manoranjan and Ramachandra Rao, Adabala'
-  fjournal: 'Zeitschrift f\"ur Angewandte Mathematik und Physik. ZAMP. Journal of Applied Mathematics and Physics. Journal de Math\''ematiques et de Physique Appliqu\''ees'
-  url: 'http://dx.doi.org/10.1007/s00033-003-1070-7'
-  pages: '532--550'
-  year: '2003'
-  title: 'Peristaltic transport of a Newtonian fluid in an asymmetric channel'
-  doi: '10.1007/s00033-003-1070-7'
-  issn: '0044-2275'
-  journal: 'Z. Angew. Math. Phys.'
-  mrnumber: '2048670'
-  mrclass: '76Z05 (74F10 74L15 92C35)'
-  volume: '54'
-
 - number: '2'
   author: 'Panda, Srikumar and Martha, Subash Chandra and Chakrabarti, Aloknath'
   fjournal: 'Journal of the Orissa Mathematical Society'
@@ -4180,6 +4166,33 @@
   mrnumber: '4145798'
   mrclass: '47B32 (47A60 47B13)'
   volume: '238'
+
+- number: '4'
+  author: 'Ayyer, Arvind and Banerjee, Naya'
+  fjournal: 'Enumerative Combinatorics and Applications'
+  url: 'https://doi.org/10.54550/eca2022v2s4pp1'
+  pages: 'Paper No. S4PP1, 14'
+  year: '2022'
+  title: 'The number of inversions of permutations with fixed shape'
+  doi: '10.54550/eca2022v2s4pp1'
+  journal: 'Enumer. Comb. Appl.'
+  mrnumber: '4479699'
+  mrclass: '05A05 (05A15 05A17)'
+  volume: '2'
+
+- number: '3'
+  author: 'Mishra, Manoranjan and Ramachandra Rao, Adabala'
+  fjournal: 'Zeitschrift f\"ur Angewandte Mathematik und Physik. ZAMP. Journal of Applied Mathematics and Physics. Journal de Math\''ematiques et de Physique Appliqu\''ees'
+  url: 'http://dx.doi.org/10.1007/s00033-003-1070-7'
+  pages: '532--550'
+  year: '2003'
+  title: 'Peristaltic transport of a Newtonian fluid in an asymmetric channel'
+  doi: '10.1007/s00033-003-1070-7'
+  issn: '0044-2275'
+  journal: 'Z. Angew. Math. Phys.'
+  mrnumber: '2048670'
+  mrclass: '76Z05 (74F10 74L15 92C35)'
+  volume: '54'
 
 - number: '3'
   author: 'Bhunia, Pintu and Sain, Debmalya and Paul, Kallol'
@@ -6383,6 +6396,16 @@
   mrnumber: '3135030'
   mrclass: '74J25 (35J25 35R30 65N21 78A40)'
   volume: '21'
+
+- author: 'Ayyer, Arvind and Kumari, Nishu'
+  fjournal: 'S\''eminaire Lotharingien de Combinatoire'
+  pages: 'Art. 38, 12'
+  year: '2022'
+  title: 'Factorization of classical characters twisted by roots of unity: extended abstract'
+  journal: 'S\''em. Lothar. Combin.'
+  mrnumber: '4490879'
+  mrclass: '05A15 (05E05 05E10 20G05 20G20)'
+  volume: '86B'
 
 - number: '2'
   author: 'Pal, Ritwik'
@@ -10099,6 +10122,20 @@
   mrclass: '49N70 (49L25 91A05 91A23)'
   volume: '16'
 
+- number: '3'
+  author: 'Banerjee, Abhishek and Kour, Surjeet'
+  fjournal: 'Algebraic \& Geometric Topology'
+  url: 'https://doi.org/10.2140/agt.2022.22.1113'
+  pages: '1113--1158'
+  year: '2022'
+  title: 'On measurings of algebras over operads and homology theories'
+  doi: '10.2140/agt.2022.22.1113'
+  issn: '1472-2747'
+  journal: 'Algebr. Geom. Topol.'
+  mrnumber: '4474780'
+  mrclass: '16T15 (18M60)'
+  volume: '22'
+
 - number: '2'
   author: 'Bhattacharyya, Tirthankar and Sau, Haripada'
   fjournal: 'Journal of Functional Analysis'
@@ -10212,6 +10249,20 @@
   mrnumber: '3754240'
   mrclass: '01A70'
   volume: '27'
+
+- number: '2'
+  author: 'Ganapathy, Radhika'
+  fjournal: 'Pacific Journal of Mathematics'
+  url: 'https://doi.org/10.2140/pjm.2022.319.307'
+  pages: '307--332'
+  year: '2022'
+  title: 'A Hecke algebra isomorphism over close local fields'
+  doi: '10.2140/pjm.2022.319.307'
+  issn: '0030-8730'
+  journal: 'Pacific J. Math.'
+  mrnumber: '4482718'
+  mrclass: '22E50 (11F70)'
+  volume: '319'
 
 - url: 'http://dx.doi.org/10.1007/11792086_14'
   mrnumber: '2282924'
@@ -10693,6 +10744,20 @@
   mrnumber: '3787524'
   mrclass: '18E30 (14A20)'
   volume: '356'
+
+- number: '2'
+  author: 'Kashyap, Navin and Krishnapur, Manjunath'
+  fjournal: 'Information and Inference. A Journal of the IMA'
+  url: 'https://doi.org/10.1093/imaiai/iaab009'
+  pages: '423--434'
+  year: '2022'
+  title: 'How many modes can a mixture of Gaussians with uniformly bounded means have?'
+  doi: '10.1093/imaiai/iaab009'
+  issn: '2049-8764'
+  journal: 'Inf. Inference'
+  mrnumber: '4474342'
+  mrclass: '60E05'
+  volume: '11'
 
 - number: '11'
   author: 'Ghosh, Mrinal K. and Arapostathis, Aristotle and Marcus, Steven I.'
@@ -13803,6 +13868,20 @@
   mrclass: '94B12'
   volume: '2076'
 
+- number: '3'
+  author: 'Banerjee, Abhishek'
+  fjournal: 'Journal of Pure and Applied Algebra'
+  url: 'https://doi.org/10.1016/j.jpaa.2022.107233'
+  pages: 'Paper No. 107233, 15'
+  year: '2023'
+  title: 'Two criteria for locally noetherian Grothendieck categories'
+  doi: '10.1016/j.jpaa.2022.107233'
+  issn: '0022-4049'
+  journal: 'J. Pure Appl. Algebra'
+  mrnumber: '4477962'
+  mrclass: '18E10 (16D50 16D70 16D90 18G05)'
+  volume: '227'
+
 - author: 'Bagchi, Bhaskar and Datta, Basudeb and Spreer, Jonathan'
   fjournal: 'European Journal of Combinatorics'
   url: 'https://doi.org/10.1016/j.ejc.2015.12.006'
@@ -15841,6 +15920,20 @@
   mrclass: '93E35 (62L20 90C40 91B28)'
   volume: '33'
 
+- number: '3'
+  author: 'Gehlawat, Sahil and Verma, Kaushal'
+  fjournal: 'Archiv der Mathematik'
+  url: 'https://doi.org/10.1007/s00013-022-01762-w'
+  pages: '311--323'
+  year: '2022'
+  title: 'Non-negative divisors and the Grauert metric'
+  doi: '10.1007/s00013-022-01762-w'
+  issn: '0003-889X'
+  journal: 'Arch. Math. (Basel)'
+  mrnumber: '4472545'
+  mrclass: '32Q15 (32T05)'
+  volume: '119'
+
 - number: '1'
   author: 'Sen, Jeet and Sain, Debmalya and Paul, Kallol'
   fjournal: 'Annals of Functional Analysis'
@@ -16170,6 +16263,20 @@
   mrclass: '53C21'
   volume: '26'
 
+- number: '11'
+  author: 'Bera, Sudip'
+  fjournal: 'Communications in Algebra'
+  url: 'https://doi.org/10.1080/00927872.2022.2069793'
+  pages: '4652--4668'
+  year: '2022'
+  title: 'Line graph characterization of power graphs of finite nilpotent groups'
+  doi: '10.1080/00927872.2022.2069793'
+  issn: '0092-7872'
+  journal: 'Comm. Algebra'
+  mrnumber: '4469917'
+  mrclass: '20D10 (05C25 20D15)'
+  volume: '50'
+
 - number: '2'
   author: 'Giri, Deb Kumar and Srivastava, R. K.'
   fjournal: 'The Journal of Fourier Analysis and Applications'
@@ -16237,6 +16344,18 @@
   mrnumber: '2392192'
   mrclass: '01A70 (76P05 82C40)'
   volume: '75'
+
+- number: '3'
+  author: 'Sain, Debmalya and Roy, Saikat and Paul, Kallol'
+  fjournal: 'Journal of Convex Analysis'
+  pages: '703--716'
+  year: '2022'
+  title: 'A topological generalization of orthogonality in Banach spaces and some applications'
+  issn: '0944-6532'
+  journal: 'J. Convex Anal.'
+  mrnumber: '4478232'
+  mrclass: '46B20 (57N17)'
+  volume: '29'
 
 - number: '4'
   author: 'Prasad, Phoolan'
@@ -17294,6 +17413,20 @@
   mrclass: '14J60 (14J70)'
   volume: '14'
 
+- number: '4'
+  author: 'Gudi, Thirupathi and Mallik, Gouranga and Pramanick, Tamal'
+  fjournal: 'SIAM Journal on Numerical Analysis'
+  url: 'https://doi.org/10.1137/21M1412050'
+  pages: '2318--2344'
+  year: '2022'
+  title: 'A hybrid high-order method for quasilinear elliptic problems of nonmonotone type'
+  doi: '10.1137/21M1412050'
+  issn: '0036-1429'
+  journal: 'SIAM J. Numer. Anal.'
+  mrnumber: '4474384'
+  mrclass: '65N30 (65N12 65N15)'
+  volume: '60'
+
 - number: '11'
   author: 'Sanjay, P. K. and Thangavelu, S.'
   fjournal: 'Proceedings of the American Mathematical Society'
@@ -17989,21 +18122,6 @@
   mrclass: '46B20 (46C50 47L05)'
   volume: '115'
 
-- number: '7'
-  author: 'Bharali, Gautam and Biswas, Indranil and Schumacher, Georg'
-  fjournal: 'Complex Variables and Elliptic Equations. An International Journal'
-  url: 'https://doi.org/10.1080/17476933.2016.1252342'
-  pages: '914--918'
-  year: '2017'
-  mrreviewer: 'Ji\vr\''i Lebl'
-  title: 'A criterion for a degree-one holomorphic map to be a biholomorphism'
-  doi: '10.1080/17476933.2016.1252342'
-  issn: '1747-6933'
-  journal: 'Complex Var. Elliptic Equ.'
-  mrnumber: '3633161'
-  mrclass: '32H02 (32J18)'
-  volume: '62'
-
 - number: '1'
   author: 'Chan, Chun Lam and Fernandes, Winston and Kashyap, Navin and Krishnapur, Manjunath'
   fjournal: 'SIAM Journal on Discrete Mathematics'
@@ -18475,6 +18593,35 @@
   mrnumber: '3467550'
   mrclass: '54H11 (20G15)'
   volume: '84'
+
+- number: '4'
+  author: 'Pingali, Vamsi Pritham'
+  fjournal: 'Analysis \& PDE'
+  url: 'https://doi.org/10.2140/apde.2022.15.921'
+  pages: '921--935'
+  year: '2022'
+  title: 'The deformed Hermitian Yang-Mills equation on three-folds'
+  doi: '10.2140/apde.2022.15.921'
+  issn: '2157-5045'
+  journal: 'Anal. PDE'
+  mrnumber: '4478294'
+  mrclass: '32W50 (32Q15 32W20 53C07)'
+  volume: '15'
+
+- number: '7'
+  author: 'Bharali, Gautam and Biswas, Indranil and Schumacher, Georg'
+  fjournal: 'Complex Variables and Elliptic Equations. An International Journal'
+  url: 'https://doi.org/10.1080/17476933.2016.1252342'
+  pages: '914--918'
+  year: '2017'
+  mrreviewer: 'Ji\vr\''i Lebl'
+  title: 'A criterion for a degree-one holomorphic map to be a biholomorphism'
+  doi: '10.1080/17476933.2016.1252342'
+  issn: '1747-6933'
+  journal: 'Complex Var. Elliptic Equ.'
+  mrnumber: '3633161'
+  mrclass: '32H02 (32J18)'
+  volume: '62'
 
 - number: '11'
   author: 'Poria, Anirudha'
