Updated Faculty Alumni

--- a/_data/fac-alumni.yaml
+++ b/_data/fac-alumni.yaml
@@ -29,6 +29,8 @@
 - name: A V Gopalakrishna
 - name: Guruprasad
 - name: Gopal Basak
+  position: Faculty, ISI, Kolkata
+  website: https://isi.irins.org/profile/111458
 - name: T. Sengadir
 - name: Sameer Jalnapurkar
 - name: C.R. Pradeep
@@ -54,6 +56,8 @@
   website: http://math.iisc.ac.in/~veluma/
 
 - name: Mrinal K. Ghosh
+  website: http://math.iisc.ac.in/~mkg/
 
 - name: Basudeb Datta
+  website: http://math.iisc.ac.in/~dattab/
 
