Updated Integrated Student 2013 Batch

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -131,6 +131,8 @@
   image: true
   guide: Arvind Ayyer
   scholarship: IISc
+  webpage: https://subhajitgithub2019.github.io/Home_page-of-subhajit_ghosh/
+
 
 
 - name	:	Anindya Biswas
