--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -22,6 +22,7 @@
 - name : Athmanathan S.
   degree : Bachelor of Science (Research)
   year : '2015'
+  present:"Graduate student at University of Tennessee Knoxville"
 - name : Gollapalli Thyagarajulu
   degree : Bachelor of Science (Research)
   present: "Graduate student at Monash University"
