--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -41,7 +41,7 @@
   degree: Bachelor of Science (Research)
   present: "Graduate student at University of California at Berkeley"
   year: '2016'
-- name: Sampada Chandrashekhar Kolharkar
+- name: Sampada Chandrashekhar Kolhatkar
   degree: Bachelor of Science (Research)
   present: "Chennai Mathematical Institute"
   year: '2016'
@@ -57,7 +57,6 @@
   degree: Bachelor of Science (Research)
   present: "Graduate student at Columbia University"
   year: '2016'
-
 - name: Vignesh A. N.
   degree: Bachelor of Science (Research) & Master of Science
   present: "Graduate student at Berlin School of Mathematics"
@@ -67,14 +66,14 @@
   year: '2016'
 - name: Sriram C.
   degree: Bachelor of Science (Research) & Master of Science
+  present: "National Institute of Advanced Studies"
   year: '2016'
 - name: Chirag S. Igoor
   degree: Bachelor of Science (Research) & Master of Science
   year: '2016'
 - name: Sameer Bipin Shah
   degree: Bachelor of Science (Research) & Master of Science
-  year: '2016'
-
+  year: '2016'  
   
 - name: Sayyad Irfan Ali
   degree: Bachelor of Science (Research)
