--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -75,6 +75,7 @@
   degree: Bachelor of Science (Research) & Master of Science
   year: '2016'  
   
+  
 - name: Sayyad Irfan Ali
   degree: Bachelor of Science (Research)
   year: '2017'
@@ -232,6 +233,7 @@
   year : '2019'
 - name : Biswajit Nag
   degree : Bachelor of Science (Research)
+  present: "Graduate student at TIFR Mumbai"
   year : '2019'
 - name : Prateek Yadav
   degree : Bachelor of Science (Research)
@@ -261,6 +263,7 @@
   year : '2019'
 - name : Dushyant Prashant Sapre
   degree : Bachelor of Science (Research) & Master of Science
+  present: "Quantitative Analyst at Credit Suisse"
   year : '2019'
 - name : Tapesh Yadav
   degree : Bachelor of Science (Research) & Master of Science
