--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -181,7 +181,7 @@
   year: '2018'
 - name: Saswata Chatterjee
   degree: Bachelor of Science (Research) & Master of Science
-  present: Associate Software Engineer at iManage LLC (Bangalore)
+  present: "Associate Software Engineer at iManage LLC (Bangalore)"
   year: '2018'
 - name: Agniva Das Gupta
   degree: Bachelor of Science (Research) & Master of Science
