--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -273,6 +273,7 @@
   
 - name : Aniruddh Balasubramaniam
   degree : Bachelor of Science (Research)
+  present: "Founder & CEO, BalooChat"
   year : '2020'
 - name : Manan Bhatia
   degree : Bachelor of Science (Research)
