--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -4,6 +4,7 @@
   year : '2015'
 - name : Tejas Fuley
   degree : Bachelor of Science (Research)
+  present: "Umang Geetai College; MBA at University of Western Australia"
   year : '2015'
 - name : Terrence George George
   degree : Bachelor of Science (Research)
