--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -23,7 +23,7 @@
 - name : Athmanathan S.
   degree : Bachelor of Science (Research)
   year : '2015'
-  present:"Graduate student at University of Tennessee Knoxville"
+  present: "Graduate student at University of Tennessee Knoxville"
 - name : Gollapalli Thyagarajulu
   degree : Bachelor of Science (Research)
   present: "Graduate student at Monash University"
@@ -123,8 +123,7 @@
   year: '2017'
 
 - name: Abhishek Balakrishna
-  degree: Bachelor
- of Science (Research) & Master of Science
+  degree: Bachelor of Science (Research) & Master of Science
   present: "Graduate student at University of Maryland, Baltimore County"
   year: '2017'
 - name: Soumyo Biswas
