--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -284,6 +284,7 @@
   year : '2020'
 - name : Rohan Das
   degree : Bachelor of Science (Research)
+  present: "Graduate school at Indian Statistical Institute Delhi"
   year : '2020'
 - name : Julian Reuben D'Costa
   degree : Bachelor of Science (Research)
@@ -291,9 +292,11 @@
   year : '2020'
 - name : Pranshu Kishor Raashi Gaba
   degree : Bachelor of Science (Research)
+  present: "Graduate student at TIFR Mumbai"
   year : '2020'
 - name : Chandrakant Harjpal                              
   degree : Bachelor of Science (Research)
+  present: "Graduate student in Brain & AI Program at IISc"
   year : '2020'
 - name : Bharath Krishnan
   degree : Bachelor of Science (Research)
@@ -307,18 +310,23 @@
   
 - name : Agneedh Basu
   degree : Bachelor of Science (Research) & Master of Science
+  present: "Chegg Inc."
   year : '2020'
 - name : Soumik Dutta
   degree : Bachelor of Science (Research) & Master of Science
+  present: "Graduate student at University of Warsaw"
   year : '2020'
 - name : Arka Ghosh
   degree : Bachelor of Science (Research) & Master of Science
+  present: "Graduate student at University of Warsaw"
   year : '2020'
 - name : Navdeep Kumar
   degree : Bachelor of Science (Research) & Master of Science
+  present: "IMT Atlantique; Graduate student at Technion"
   year : '2020'
 - name : Rohit Murali
   degree : Bachelor of Science (Research) & Master of Science
+  present: "Graduate student at University of British Columbia"
   year : '2020'
 - name : Abhratanu Saha
   degree : Bachelor of Science (Research) & Master of Science
