--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -330,6 +330,7 @@
   year : '2020'
 - name : Abhratanu Saha
   degree : Bachelor of Science (Research) & Master of Science
+  present: "Graduate student at Ecole Normale Supérieure"
   year : '2020'
 - name : K. Philip Thomas
   degree : Bachelor of Science (Research) & Master of Science
